@@ -5,6 +5,8 @@ Revision history for Test-BrewBuild
           in test results (closes #124)
         - instance_install() when installing randomly doesn't attempt duplicate
           versions any longer (fixes #123)
+        - on Unix, we now include Release Candidate perl instances when using
+          random install (closes #127)
 
 2.03    2016-04-26
         - brewbuild can now dispatch the most basic of testing to remotes via
